<resources>
    <string name="app_name">LyonSampleView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_FloatView">浮動視窗</string>
    <string name="menu_aboutMe">關於我</string>
    <string name="about_Me_sub">這是LyonHsu 使用kotlin製作的Android App！</string>
    <string name="help">幫助</string>
    <string name="file">檔案</string>
    <string name="create_new">開啟新檔</string>
    <string name="open">打開</string>
    <string name="addNew">新增</string>
    <string name="contactMe">聯絡我</string>
    <string name="remove">移除</string>
</resources>
