<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/file"
          android:orderInCategory="100"
          android:title="@string/file" >
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/create_new"
                  android:title="@string/create_new" />
            <item android:id="@+id/open"
                  android:title="@string/open" />
        </menu>
    </item>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_remove"
        android:title="@string/remove"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <!--顯示在action bar -->
    <!--<item android:id="@+id/help"-->
          <!--android:orderInCategory="100"-->
          <!--android:icon="@android:drawable/ic_menu_help"-->
          <!--android:title="@string/help"-->
          <!--app:showAsAction="ifRoom"/>-->

</menu>
